--- a/pymaceuticals_main.ipynb
+++ b/pymaceuticals_main.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -10,8 +17,18 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
-    " "
+    "From the summary and visualization of the data provided for us, I have noted 4 things.\n",
+    "\n",
+    "- The statistics show that Capomulin is performing well across the board, being a close 2nd to Ramicane. This is a good sign for our drug of interest.\n",
+    "\n",
+    "- The data is split almost evenly between genders which will give us a more general estimate on the drug effects.\n",
+    "\n",
+    "- With the specific observations on Capomulin, we can see that it is consistent (2nd in smallest variance). Also we can see on our sample mouse l509 that the drug is in a downward trend but fluctuates. The tumor slowly increases overtime then suddenly drops a big amount. This repeats a few more times.\n",
+    "\n",
+    "- The scatterplot I have created show that there is a correlation between the weight of the mouse and the size of the tumor.\n",
+    "\n",
+    "### Conclusion\n",
+    "Overall Capomulin is a very good drug for the tumor that it is second in effectivity as compared to others that give the size and uptrend. We also discovered the correlation of the weights and the usual changes in the size of the tumor overtime. This gives us enough confidence in the drug but there needs more analysis to find more strengths or even flaws that may not surprise as later on."
    ]
   },
   {
@@ -1156,17 +1173,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The IQR of Capomulin is 7.78\n",
       "Capomulin potential outliers: [].\n",
+      "The IQR of Ramicane is 9.1\n",
       "Ramicane potential outliers: [].\n",
+      "The IQR of Infubinol is 11.48\n",
       "Infubinol potential outliers: 31    36.321346\n",
       "Name: Tumor Volume (mm3), dtype: float64.\n",
+      "The IQR of Ceftamin is 15.58\n",
       "Ceftamin potential outliers: [].\n"
      ]
     }
@@ -1213,6 +1234,7 @@
     "    #get index\n",
     "    for x in outliers[d]:\n",
     "        index = volumes[volumes == x]\n",
+    "    print(f'The IQR of {d} is {round(iqr,2)}' )\n",
     "    print(f'{d} potential outliers: {index}.')\n",
     "    data.append(volumes.tolist())\n",
     "    "
@@ -1220,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
